Fix subportfolio grid on ie

--- a/css/partials/_subportfolio.scss
+++ b/css/partials/_subportfolio.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding: $content-padding;
+    width: 100%;
     .subportfolio-item {
         overflow: hidden;
         position: relative;
